# rust-elisp

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
a-learning/: Cargo.toml
docker/: Dockerfile
docker/glisp/: Dockerfile
docker/wasmlisp/: Dockerfile
elisp/: Cargo.toml  README.md
elisp/examples/: 8queen.rs  load_url.rs  qsort.rs
elisp/samples/: 8queen.scm  base64.scm  bsearch.scm  easy-hash.scm  kansuji.scm  oops.scm  queen.scm  zeller.scm
elisp/src/: boolean.rs  buildin.rs  chars.rs  dyn_lisp.rs  env.rs  env_single.rs  env_thread.rs  hashtable.rs  io.rs  lib.rs  lisp.rs  list.rs  math.rs  number.rs  operation.rs  signal.rs  strings.rs  syntax.rs  util.rs
elisp/src/draw/: coord.rs  mod.rs  util.rs
elisp/src/unix/: mod.rs  signal.rs
elisp/tests/: integration_test.rs
examples/: gtk.rs  qsort.rs
ffilisp/: Cargo.toml  README.md  test.py
ffilisp/src/: lib.rs
glisp/: Cargo.toml  README.md
glisp/examples/: gtk.rs  load_image_url.rs
glisp/samples/: common.scm  dragon.scm  fractal.scm  koch.scm  sierpinski.scm  tree.scm
glisp/samples/sicp/: abstract-data.scm  demo.scm  fractal-huge-memory.scm  fractal.scm  painter.scm  roger.scm  wave.scm
glisp/src/: buildin.rs  draw.rs  helper.rs  koch.rs  lib.rs  sierpinski.rs  tree.rs  ui.rs
glisp/src/fractal/: dragon.rs  hilbert.rs  hilvert.rs  koch.rs  mod.rs  sierpinski.rs  tree.rs
samples/: koch.scm  sierpinski.scm  tree.scm
samples/sicp/: painter.scm  wave.scm
src/: dyn_lisp.rs  lib.rs  lisp.rs
tinywasm/: Cargo.toml  README.md  index.html  load.js  ui.css  ui.js
tinywasm/src/: lib.rs
wasmlisp/: .gitignore  4k.html  Cargo.toml  README.md  cpweb.sh  index.html  index.js  package.json  ui.css  ui.js  webpack.config.js
wasmlisp/src/: buildin.rs  draw.rs  helper.rs  lib.rs  lisp.rs
wasmlisp/src/fractal/: koch.rs  mod.rs  sierpinski.rs  tree.rs
weblisp/: Cargo.toml  README.md
weblisp/examples/: webasync.rs
weblisp/samples/: index.css  index.html  index.json  index.xml  test-ng.scm  test.scm
weblisp/samples/examples/: hoge.html  index.cgi  index.html  ng.cgi  ng2.cgi  png.cgi  post.cgi  redirect.cgi  redirect302.cgi
weblisp/src/: buildin.rs  concurrency.rs  config.rs  epoll.rs  lib.rs  lisp.rs  server.rs  web.rs
zlearning/: Cargo.toml
zlearning/src/: lib.rs  param.rs  path.rs  tree.rs  visitor.rs  walker.rs
