[package]
name = "elisp"
version = "0.1.0"
authors = ["hideki kuno <hidekuno@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.3.0"
log = "*"
env_logger = "*"
rand = "0.6"
gtk = { git = "https://github.com/gtk-rs/gtk.git" }
gdk = { git = "https://github.com/gtk-rs/gdk.git" }
glib = { git = "https://github.com/gtk-rs/glib.git" }
