[package]
name = "elisp"
version = "0.8.3"
authors = ["hideki kuno <hidekuno@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.3.0"
log = "*"
env_logger = "*"
rand = "0.6"

[target.'cfg(unix)'.dependencies]
ctrlc = { version = "3.1.7", optional = true }

[features]
thread = ["ctrlc"]
interrupt = ["ctrlc"]
