[package]
name = "elisp"
version = "0.8.4"
authors = ["hideki kuno <hidekuno@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.3.0"
log = "*"
env_logger = "*"
rand = "0.6"

[dev-dependencies]
surf = "1.0.3"
serde = { version = "1.0", features = ["derive"] }
async-std = { version = "1.5.0", features = ["attributes"] }

[features]
thread = []
signal = []
