[package]
name = "ffilisp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elisp = { path = "../elisp",version = "0.8.5", features = ["thread"]}
lazy_static = "1.3.0"

# crate-type includes the following
#   staticlib
#   rlib
#   dylib
#   cdylib

[lib]
crate-type = ["cdylib"]
