[package]
name = "glisp"
version = "0.8.3"
authors = ["hideki kuno <hidekuno@gmail.com>"]
edition = "2018"

[dependencies]
elisp = { path = "../elisp",version = "0.8.3" }
gtk = { git = "https://github.com/gtk-rs/gtk.git" }
gdk = { git = "https://github.com/gtk-rs/gdk.git" }
glib = { git = "https://github.com/gtk-rs/glib.git" }
cairo-rs = { git = "https://github.com/gtk-rs/cairo.git" , features = ["png"] }

[features]
animation = []
