[package]
name = "glisp"
version = "0.8.5"
authors = ["hideki kuno <hidekuno@gmail.com>"]
edition = "2018"

[dependencies]
elisp = { path = "../elisp",version = "0.8.5" }
gtk = { git = "https://github.com/gtk-rs/gtk.git" }
gdk = { git = "https://github.com/gtk-rs/gdk.git" }
glib = { git = "https://github.com/gtk-rs/glib.git" }
cairo-rs = { git = "https://github.com/gtk-rs/cairo.git" , features = ["png"] }
gdk-pixbuf = { git = "https://github.com/gtk-rs/gdk-pixbuf.git" }

[dev-dependencies]
surf = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
async-std = { version = "1.5.0", features = ["attributes"] }
gio = { git = "https://github.com/gtk-rs/gio.git" }

[features]
animation = []
redirect =  []
