[package]
name = "glisp"
version = "0.8.5"
authors = ["hideki kuno <hidekuno@gmail.com>"]
edition = "2018"

[dependencies]
elisp = { path = "../elisp",version = "0.8.5" }
gtk = { git = "https://github.com/gtk-rs/gtk3-rs.git" }
cairo-rs = { git = "https://github.com/gtk-rs/gtk-rs-core.git", package = "cairo-rs", features = ["png"] }

[dev-dependencies]
surf = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
async-std = { version = "1.5.0", features = ["attributes"] }
wasm-bindgen="0.2.88"

[features]
animation = []
redirect =  []
