[package]
name = "tinywasm"
version = "0.1.0"
edition = "2021"
authors = ["hidekuno <hidekuno@gmail.com>"]
description = "A Lisp Interpreter with Web Assembly examples"
repository = "https://github.com/hidekuno/rust-elisp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
elisp = { path = "../elisp",version = "0.8.5", features = ["thread"]}
lazy_static = "1.3.0"
wasm-bindgen = "0.2"
