[package]
name = "wasmlisp"
version = "0.7.3"
authors = ["hidekuno <hidekuno@gmail.com>"]
edition = "2018"
description = "A Lisp Interpreter with Web Assembly"
repository = "https://github.com/hidekuno/rust-elisp"

[lib]
crate-type = ["cdylib"]

[dependencies]
elisp = { path = "../elisp",version = "0.7.3" }
wasm-bindgen = "0.2"
js-sys = "0.3.30"
wasm-bindgen-test = "0.2"
wasm-bindgen-futures = "0.4.4"

[dependencies.web-sys]
version = "0.3"
features = [
  'console',
  'CssStyleDeclaration',
  'Document',
  'DomStringMap',
  'DomTokenList',
  'Element',
  'Event',
  'EventTarget',
  'HtmlBodyElement',
  'HtmlElement',
  'HtmlInputElement',
  'KeyboardEvent',
  'Location',
  'Node',
  'NodeList',
  'Storage',
  'Window',
  'HtmlTextAreaElement',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'HtmlImageElement',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
]
