[package]
name = "wasmlisp"
version = "0.8.5"
authors = ["hidekuno <hidekuno@gmail.com>"]
edition = "2018"
description = "A Lisp Interpreter with Web Assembly"
repository = "https://github.com/hidekuno/rust-elisp"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
elisp = { path = "../elisp",version = "0.8.5" }
wasm-bindgen = "0.2"
js-sys = "0.3.30"
wasm-bindgen-test = "0.3"
wasm-bindgen-futures = "0.4.4"

[dependencies.web-sys]
version = "0.3"
features = [
  'CssStyleDeclaration',
  'Document',
  'Element',
  'Event',
  'HtmlElement',
  'HtmlInputElement',
  'Navigator',
  'Window',
  'HtmlTextAreaElement',
  'HtmlCanvasElement',
  'HtmlDivElement',
  'CanvasRenderingContext2d',
  'HtmlImageElement',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
]
[features]
develop = []
