[package]
name = "weblisp"
version = "0.8.5"
authors = ["hidekuno <hidekuno@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
elisp = { path = "../elisp", version = "0.8.5", features = ["thread"] }
log = "*"
env_logger = "*"
mio = { version = "0.8", features = ["os-poll", "net"] }

[dev-dependencies]
futures = "0.3"
async-std = { version = "1.10.0", features = ["attributes"] }

[features]
all-interface = []
